fix: scrollbar shown when not needed

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,7 +38,6 @@
   }
 }
 body {
-  overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
 /* Firefox */
